edits - course description

--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -114,33 +114,64 @@ seo:
       <p>{{page.course-description.description_html}}</p>
   </div> -->
 
-<section class="py-10p">
-<div class="px-10p w-[70%]">
-  <h2 class="text-lg-serif text-feature">What is The Art of Dancing Life?</h2>
-  <p>Wouldn’t it be so cool to wake up every single day and be able to think to yourself, <em>“Damn, I’m doing this whole LIFE thing really good.”</em>?</p>
-  <div class="mt-12 bg-image-style min-h-[90vh] bg-[bottom]" style="background-image: url(/uploads/images/manamei-81.jpg);"></div>
-</div>
+  <section class="py-10p">
+    <div class="px-10p mb-12">
+      <h2 class="text-lg-serif text-feature text-center">What is The Art of Dancing Life?</h2>
+      <p>Wouldn’t it be so cool to wake up every single day and be able to think to yourself, <em>“Damn, I’m doingthis whole LIFE thing really good.”</em>?</p>
+    </div>
 
-<div class="p-10p">
-  <p>Living life to its fullest and creating a satisfying experience for yourself is an ART. The facets of your Life journey must be crafted and curated with <strong>attention & intention</strong>. This finely curated masterpiece of life can only be achieved through a deep level of AWARENESS, not only to your outer environment, but also, first and foremost to your <strong>INNER LANDSCAPE</strong>.</p>
-</div>
+    <div class="grid grid-cols-2">
 
-<div class="bg-image-style min-h-[70vh]" style="background-image: url(/uploads/images/manamei-76.jpg);"></div>
-</div>
+        <!-- Left Column -->
+        <div class="my-12 pl-[20%] pr-10p flex items-center justify-center">
+          <div>
+            <p>Living life to its fullest and creating a satisfying experience for yourself is an ART. The facets of your Life journey must be crafted and curated with <strong>attention & intention</strong>. This finely curated masterpiece of life can only be achieved through a deep level of AWARENESS, not only to your outer environment, but also, first and foremost to your <strong>INNER LANDSCAPE</strong>.</p>
+          </div>
+        </div>
 
-<div>
-  <p>Then, we use the <strong>BODY</strong> as a vessel to bridge the potential of our inner wonderland into the lived experience of our outer world- manifested through our actions,  movements, words, and moment-to-moment choices.</p>
-  <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
-</div>
-  
+        <!-- Right Column -->
+        <div class="bg-image-style min-h-[90vh] bg-[bottom]"
+        style="background-image: url(/uploads/images/manamei-81.jpg);"></div>
+    </div>
+
+
+    <div class="p-10p w-[80%]">
+        <p>Then, we use the <strong>BODY</strong> as a vessel to bridge the potential of our inner wonderland into the lived experience of our outer world- manifested through our actions,  movements, words, and moment-to-moment choices.</p>
+    </div>
+
+    <div class="bg-image-style min-h-[70vh]" style="background-image: url(/uploads/images/manamei-76.jpg);"></div>
+    </div>
+
+    <div class="p-10p">
+        <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
+    </div>
+
+    <!-- 2 Columns -->
+     <div class="grid grid-cols-2">
+
+      <!-- Left Column (image) -->
+       <div class="bg-image-style min-h-[90vh]" style="background-image: url('/uploads/images/manamei-82.jpg');"></div>
+
+       <!-- RIght Column (text) -->
+        <div class="flex items-center justify-center">
+          <div class="py-10p pl-10p pr-[20%]">
+            <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
+          </div>
+        </div>
+
+
+     </div>
+
 </section>
 
 <!-- Who It's For -->
-<section class="bg-image-style bg-overlay py-10p px-5p p-5p md:p-10p text-center {{page.who-its-for.background-image.overlay_style}}" style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}}">
-  <h2 class="text-lg-serif">{{page.who-its-for.heading}}</h2>
-  <div class="md:px-10p">
-      <p>{{page.who-its-for.description_html}}</p>
-  </div>
+<section
+    class="bg-image-style bg-overlay py-10p px-5p p-5p md:p-10p text-center {{page.who-its-for.background-image.overlay_style}}"
+    style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}}">
+    <h2 class="text-lg-serif">{{page.who-its-for.heading}}</h2>
+    <div class="md:px-10p">
+        <p>{{page.who-its-for.description_html}}</p>
+    </div>
 </section>
 
 <!-- Banner -->
