--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -108,34 +108,28 @@ seo:
 {% include hero-banner-course.html %}
 
 <!-- Course Description -->
-<!-- <section class="pt-10p px-10p pb-5p bg-image-style bg-overlay {{page.course-description.background-image.overlay_style}}" style="background-image: url('{{page.course-description.background-image.background_image}}'); background-position: {{page.course-description.background-image.image_focus}};">
-  <h2 class="text-lg-serif text-feature">{{page.course-description.heading}}</h2>
-  <div class="mb-12 md:w-[80%]">
-      <p>{{page.course-description.description_html}}</p>
-  </div> -->
-
   <section class="py-10p">
     <div class="px-10p mb-12">
-      <h2 class="text-lg-serif text-feature text-center">What is The Art of Dancing Life?</h2>
+      <h2 class="text-lg-serif text-feature">What is The Art of Dancing Life?</h2>
       <p>Wouldn’t it be so cool to wake up every single day and be able to think to yourself, <em>“Damn, I’m doingthis whole LIFE thing really good.”</em>?</p>
     </div>
 
-    <div class="grid grid-cols-2">
+    <div class="grid grid-cols-3 gap-10p">
 
         <!-- Left Column -->
-        <div class="my-12 pl-[20%] pr-10p flex items-center justify-center">
-          <div>
+        <div class="col-span-2 flex items-center justify-center ml-15p">
+          <div class="py-10p">
             <p>Living life to its fullest and creating a satisfying experience for yourself is an ART. The facets of your Life journey must be crafted and curated with <strong>attention & intention</strong>. This finely curated masterpiece of life can only be achieved through a deep level of AWARENESS, not only to your outer environment, but also, first and foremost to your <strong>INNER LANDSCAPE</strong>.</p>
           </div>
         </div>
 
         <!-- Right Column -->
-        <div class="bg-image-style min-h-[90vh] bg-[bottom]"
+        <div class="bg-image-style min-h-[70vh] bg-[bottom]"
         style="background-image: url(/uploads/images/manamei-81.jpg);"></div>
     </div>
 
 
-    <div class="p-10p w-[80%]">
+    <div class="p-10p w-[90%]">
         <p>Then, we use the <strong>BODY</strong> as a vessel to bridge the potential of our inner wonderland into the lived experience of our outer world- manifested through our actions,  movements, words, and moment-to-moment choices.</p>
     </div>
 
@@ -159,10 +153,10 @@ seo:
           </div>
         </div>
 
-
      </div>
 
 </section>
+
 
 <!-- Who It's For -->
 <section
