--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -31,12 +31,12 @@ who-its-for:
   heading: This 2-day masterclass is for
   description_html: Any woman who is ready to live her life as a beautiful masterpiece</p><p>Women looking to gain self-awareness, applicable tools, and personal rituals to align with a satisfying and beauty-filled life</p><p class="mb-0">Those who want to meet each day with a sense of limitless potential and the anchored feeling of “Damn, I’m doing life really good”</p>
   background-image:
-    background_image: /uploads/images/manamei-77.jpg
+    background_image: /uploads/images/manamei-83.jpg
     image_focus: center
     overlay_style: light
 inside-the-course:
   heading: Schedule
-  description_html: Each session will last between 2-3 hours. We recommend highly recommend being present for the entire duration to gain the most from the masterclass.</p>If you can’t join us live, you’ll have access to a replay for 7 days.
+  description_html: Each session will last between 2-3 hours. We highly recommend being present for the entire duration to gain the most from the masterclass.</p>If you can’t join us live, you’ll have access to a replay for 7 days.
   module:
     - title: Day 1 - Tuesday, November 19th
       description_html: >-
@@ -86,11 +86,11 @@ testimonials:
 instructor:
   show: false
 cta:
-  heading: Enroll Now for $19 
+  heading: Register Now for $19 
   description_html: >-
     <p>Expand your mind, expand your Heart, and open you up to the incredible world and healing medicine of embodied movement.</p>
   button:
-    text: Enroll now
+    text: Register now
     url: >-
       https://manamei.teachable.com/p/mana-movement-sales
   background-image:
@@ -160,13 +160,14 @@ seo:
 
 <!-- Who It's For -->
 <section
-    class="bg-image-style bg-overlay py-10p px-5p p-5p md:p-10p text-center {{page.who-its-for.background-image.overlay_style}}"
+    class="bg-image-style bg-overlay min-h-[100vh] p-10p text-center {{page.who-its-for.background-image.overlay_style}} flex flex-col justify-center"
     style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}}">
-    <h2 class="text-lg-serif">{{page.who-its-for.heading}}</h2>
-    <div class="md:px-10p">
+      <div>
+        <h2 class="text-lg-serif">{{page.who-its-for.heading}}</h2>
         <p>{{page.who-its-for.description_html}}</p>
-    </div>
+      </div>
 </section>
+
 
 <!-- Banner -->
 <section class="p-10p">
@@ -174,6 +175,9 @@ seo:
     <p>Doing life really good doesn’t mean that we never meet challenges or have conflict, or that we never feel pain or disruption. Doing life really good means that we feel empowered to always bring ourself back to a sense of safety and freedom, no matter what life is throwing our way- to have agency (authority) over our own experience, inner and outer, and to stay firmly rooted in the driver’s seat of our life.</p>
   </div>
 </section>
+
+<!-- Banner -->
+ <section class="bg-no-repeat bg-cover bg-[bottom] min-h-[90vh]" style="background-image: url(/uploads/images/manamei-80.jpg);"></section>
 
 <!-- What You'll Experience -->
 <section>
@@ -216,12 +220,12 @@ seo:
   <div class="lg:grid lg:grid-cols-2 gap-5p lg:gap-10p mb-10p mx-10p lg:mt-10p">
 
       <!-- Left Column (image) -->
-      <div class="mb-10p lg:mb-0 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-7.jpg');"></div>
+      <div class="mb-10p lg:mb-0 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-84.jpg');"></div>
 
       <!-- Right Column (text) -->
       <div class="p-10p border border-feature">
           <h2 class="uppercase text-feature">Gain invaluable embodiment tools</h2>
-          <p class="mb-4">(to use for the resot of your life!)</p>
+          <p class="mb-4">(to use for the rest of your life!)</p>
           <p class="mb-0">Tools for Self-Regulating the Nervous System</p>
           <ul class="list">
               <li>Grounding and Interoception</li>
