--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -94,7 +94,7 @@ cta:
     url: >-
       https://manamei.teachable.com/p/mana-movement-sales
   background-image:
-    background_image: /uploads/images/manamei-80.jpg
+    background_image: /uploads/images/manamei-85.jpg
     background-position: center
     overlay_style: medium
 seo: 
@@ -108,47 +108,52 @@ seo:
 {% include hero-banner-course.html %}
 
 <!-- Course Description -->
-  <section class="py-10p">
-    <div class="px-10p mb-12">
-      <h2 class="text-lg-serif text-feature">What is The Art of Dancing Life?</h2>
-      <p>Wouldn’t it be so cool to wake up every single day and be able to think to yourself, <em>“Damn, I’m doingthis whole LIFE thing really good.”</em>?</p>
+  <section class="pb-10p">
+    <div class="p-10p">
+      <h2>Wouldn’t it be so cool to wake up every single day and be able to think to yourself,
+        <br><span class="text-lg-serif text-feature">“Damn, I’m doingthis whole life thing really good.”</span></h2>
     </div>
 
-    <div class="grid grid-cols-3 gap-10p">
+    <!-- Mobile Image -->
+    <div class="md:hidden mx-10p bg-image-style min-h-[70vh] bg-[bottom]"
+    style="background-image: url(/uploads/images/manamei-81.jpg);"></div>
+
+    <div class="grid md:grid-cols-3 gap-10p">
 
         <!-- Left Column -->
-        <div class="col-span-2 flex items-center justify-center ml-15p">
-          <div class="py-10p">
+        <div class="md:col-span-2 flex items-center justify-center p-10p md:p-0 ml-0 md:ml-15p">
+          <div class="md:py-10p">
             <p>Living life to its fullest and creating a satisfying experience for yourself is an ART. The facets of your Life journey must be crafted and curated with <strong>attention & intention</strong>. This finely curated masterpiece of life can only be achieved through a deep level of AWARENESS, not only to your outer environment, but also, first and foremost to your <strong>INNER LANDSCAPE</strong>.</p>
           </div>
         </div>
 
         <!-- Right Column -->
-        <div class="bg-image-style min-h-[70vh] bg-[bottom]"
+        <div class="hidden md:block bg-image-style min-h-[70vh] bg-[bottom]"
         style="background-image: url(/uploads/images/manamei-81.jpg);"></div>
     </div>
 
+    <div class="md:hidden bg-image-style min-h-[70vh] mx-10p" style="background-image: url(/uploads/images/manamei-76.jpg);"></div>
 
-    <div class="p-10p w-[90%]">
+    <div class="p-10p md:w-[90%]">
         <p>Then, we use the <strong>BODY</strong> as a vessel to bridge the potential of our inner wonderland into the lived experience of our outer world- manifested through our actions,  movements, words, and moment-to-moment choices.</p>
     </div>
 
-    <div class="bg-image-style min-h-[70vh]" style="background-image: url(/uploads/images/manamei-76.jpg);"></div>
+    <div class="hidden md:block bg-image-style min-h-[70vh]" style="background-image: url(/uploads/images/manamei-76.jpg);"></div>
     </div>
 
-    <div class="p-10p">
+    <!-- <div class="p-10p">
         <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
-    </div>
+    </div> -->
 
     <!-- 2 Columns -->
-     <div class="grid grid-cols-2">
+     <div class="grid md:grid-cols-2 md:mt-10p">
 
       <!-- Left Column (image) -->
-       <div class="bg-image-style min-h-[90vh]" style="background-image: url('/uploads/images/manamei-82.jpg');"></div>
+       <div class="bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('/uploads/images/manamei-82.jpg');"></div>
 
-       <!-- RIght Column (text) -->
+       <!-- Right Column (text) -->
         <div class="flex items-center justify-center">
-          <div class="py-10p pl-10p pr-[20%]">
+          <div class="py-10p pl-10p pr-10p md:pr-[20%]">
             <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
           </div>
         </div>
@@ -180,15 +185,13 @@ seo:
  <section class="bg-no-repeat bg-cover bg-[bottom] min-h-[90vh]" style="background-image: url(/uploads/images/manamei-80.jpg);"></section>
 
 <!-- What You'll Experience -->
-<section>
-  <h2 class="hidden lg:block font-serif text-[3rem] leading-[1em] text-feature relative left-[5%] top-20">What you'll
-      experience...</h2>
+<section class="py-10p">
 
   <div class="grid lg:grid-cols-3">
 
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p order-last lg:order-first">
-          <h2 class="lg:hidden font-serif text-[3rem] leading-[1em] text-feature">What you'll experience...</h2>
+          <h2 class="font-serif text-[3rem] leading-[1em] text-feature">What you'll experience...</h2>
           <h3 class="uppercase text-feature mt-8 lg:mt-16 mb-4">Deepen your embodiment knowledge</h3>
           <p class="mb-0">The 3 Pillars of Connection (the Foundation of the Liberation Through Movement Modality)</p>
           <ul class="list">
@@ -215,15 +218,15 @@ seo:
 
 
 <!-- What You'll Get -->
-<section>
+<section class="mb-10p">
 
-  <div class="lg:grid lg:grid-cols-2 gap-5p lg:gap-10p mb-10p mx-10p lg:mt-10p">
+  <div class="lg:grid lg:grid-cols-2 gap-5p">
 
       <!-- Left Column (image) -->
       <div class="mb-10p lg:mb-0 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-84.jpg');"></div>
 
       <!-- Right Column (text) -->
-      <div class="p-10p border border-feature">
+      <div class="p-10p border border-feature my-10p mr-20p">
           <h2 class="uppercase text-feature">Gain invaluable embodiment tools</h2>
           <p class="mb-4">(to use for the rest of your life!)</p>
           <p class="mb-0">Tools for Self-Regulating the Nervous System</p>
