responsive (before Mana's last voicenote)

--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -149,11 +149,11 @@ seo:
      <div class="grid md:grid-cols-2 md:mt-10p">
 
       <!-- Left Column (image) -->
-       <div class="bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('/uploads/images/manamei-82.jpg');"></div>
+       <div class="mb-10p md:mb-0 bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('/uploads/images/manamei-82.jpg');"></div>
 
        <!-- Right Column (text) -->
         <div class="flex items-center justify-center">
-          <div class="py-10p pl-10p pr-10p md:pr-[20%]">
+          <div class="md:py-10p pl-10p pr-10p md:pr-[20%]">
             <p>Through meeting life in this way, choosing from felt-body awareness at every breath, life unfolds into a radiant <span class="font-serif text-[1.5rem]">dance</span>. We feel, then we move. We breathe, then we respond. Swaying and undulating to the luscious rhythm of our Heart and the melody of our awakened Spirit.</p>
           </div>
         </div>
@@ -185,12 +185,12 @@ seo:
  <section class="bg-no-repeat bg-cover bg-[bottom] min-h-[90vh]" style="background-image: url(/uploads/images/manamei-80.jpg);"></section>
 
 <!-- What You'll Experience -->
-<section class="py-10p">
+<section class="lg:py-10p">
 
   <div class="grid lg:grid-cols-3">
 
       <!-- Left Column (text) -->
-      <div class="lg:col-span-2 p-10p order-last lg:order-first">
+      <div class="lg:col-span-2 p-10p">
           <h2 class="font-serif text-[3rem] leading-[1em] text-feature">What you'll experience...</h2>
           <h3 class="uppercase text-feature mt-8 lg:mt-16 mb-4">Deepen your embodiment knowledge</h3>
           <p class="mb-0">The 3 Pillars of Connection (the Foundation of the Liberation Through Movement Modality)</p>
@@ -218,15 +218,15 @@ seo:
 
 
 <!-- What You'll Get -->
-<section class="mb-10p">
+<section class="lg:mb-10p">
 
   <div class="lg:grid lg:grid-cols-2 gap-5p">
 
       <!-- Left Column (image) -->
-      <div class="mb-10p lg:mb-0 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-84.jpg');"></div>
+      <div class="hidden lg:block mb-10p lg:mb-0 bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-84.jpg');"></div>
 
       <!-- Right Column (text) -->
-      <div class="p-10p border border-feature my-10p mr-20p">
+      <div class="p-5p lg:p-10p border border-feature my-10p mx-10p lg:ml-0 lg:mr-20p">
           <h2 class="uppercase text-feature">Gain invaluable embodiment tools</h2>
           <p class="mb-4">(to use for the rest of your life!)</p>
           <p class="mb-0">Tools for Self-Regulating the Nervous System</p>
@@ -247,6 +247,9 @@ seo:
               <li>Manifestation Through Intentional Embodiment</li>
           </ul>
       </div>
+
+      <!-- Image Mobile -->
+      <div class="lg:hidden bg-image-style min-h-[60vh]" style="background-image: url('/uploads/images/manamei-84.jpg');"></div>
   </div>
 </section>
 
