--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -23,8 +23,9 @@ heading:
     url: https://liberationthroughmovement.mn.co
   button-video:
     show: true
+    type: youtube
     text: Watch the video
-    url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101442/manamei/ltm_wesx93.mp4
+    url: https://www.youtube.com/embed/fcAVH4VWBTs?si=qKDjMrL-AB_nvbAO
   background_image: /uploads/images/manamei-59.jpg
   overlay_style: medium
 banner:
