--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -14,7 +14,7 @@ heading:
   button-video: 
     show: false
     text: Watch the video
-    url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101231/manamei/wisdom-body.mp4
+    url: 
   background_image: /uploads/images/manamei-70.jpg
   image_focus: 65% 50%
   overlay_style: medium
