--- a/wisdom-body.html
+++ b/wisdom-body.html
@@ -13,8 +13,9 @@ heading:
     url: https://manamei.teachable.com/p/wisdom-body
   button-video: 
     show: true
+    type: youtube
     text: Watch the video
-    url: https://res.cloudinary.com/dnb4ey82d/video/upload/v1701101231/manamei/wisdom-body.mp4
+    url: https://www.youtube.com/embed/0BW2KZzlGTg?si=frydNlUH-pWjuNlT
   background_image: /uploads/images/manamei-14.jpg
   overlay_style: medium
 banner: 
