--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -14,7 +14,7 @@ heading:
     text: Register now
     url: 
   button-video:
-    show: 
+    show: true
     type: youtube
     text: Watch the video
     url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
