hero banner buttons fixed

--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -111,11 +111,12 @@ seo:
         <h3 class="text-lg-serif">{{page.heading.subtitle}}</h3>
         <p class="uppercase">{{page.heading.description}}</p>
 
-        <div class="grid grid-cols-2">
-
+     <!-- Buttons -->
+    <div class="flex justify-center gap-4">
         <!-- Enroll Button -->
         <div class="text-center md:text-right" x-data="{ open: false }"
             x-init="$watch('open', value => document.body.classList.toggle('overflow-hidden', value))">
+
             <!-- Trigger Button -->
             <button @click="open = true" class="button">
                 {{page.heading.button-enroll.text}}
@@ -150,12 +151,10 @@ seo:
             <div class="modal-content">
                 <span class="close">&times;</span>
                 {% if page.heading.button-video.type == 'youtube' %}
-
                 <!-- YouTube iframe -->
                 <iframe width="560" height="315" src="{{page.heading.button-video.url}}" frameborder="0"
                     allowfullscreen></iframe>
                 {% else %}
-
                 <!-- Fallback for other video types -->
                 <video controls>
                     <source src="{{page.heading.button-video.url}}" type="video/mp4">
@@ -166,7 +165,8 @@ seo:
         </div>
 
         {% endif %}
-      </div>
+
+    </div>
     </div>
     
 </section>
