--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,19 @@ seo:
   hide-from-google: true
 ---
 
-<section class="grid grid-cols-3">
+<section class="grid md:grid-cols-3">
 
   <!-- Image -->
-  <div class="bg-image-style min-h-[92vh]" style="background-image: url(/uploads/images/manamei-38.jpg);"></div>
+  <div class="bg-image-style min-h-[92vh] order-last md:order-first mb-10p mx-10p md:m-0" style="background-image: url(/uploads/images/manamei-38.jpg);"></div>
 
   <!-- Contact Form -->
-  <div class="col-span-2 p-10p"> 
-    <h1 class="uppercase mb-8">Contact</h1>
+  <div class="md:col-span-2 p-10p flex items-center justify-center"> 
+    <div>
+      <h1 class="uppercase mb-8">Contact</h1>
 
-    <!-- Form -->
-    {% include form-contact.html %}
+      <!-- Form -->
+      {% include form-contact.html %}
+    </div>
 
   </div>
 </section>
