--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -17,7 +17,7 @@ heading:
     show: true
     type: youtube
     text: Watch the video
-    url: https://www.youtube.com/embed/5sEVM981_X0?si=8lwzWDFyemeUsPqJ
+    url: https://www.youtube.com/embed/RsIeqnOGJ8U?si=EirTldFQhnV71c-c
   background_image: /uploads/images/manamei-74.jpg
   image_focus: 45% 50%
   overlay_style: light
