thank you styling

--- a/theartofdancinglife.html
+++ b/theartofdancinglife.html
@@ -136,9 +136,9 @@ seo:
                         &times;
                     </button>
                     <!-- Iframe Container -->
-                    <div class="p-4">
+                    <div class="border border-feature">
                         <iframe src="https://manamei.mysamcart.com/checkout/the-art-of-dancing-life-masterclass"
-                            frameborder="0" class="w-full h-screen max-h-[80vh] rounded-md"></iframe>
+                            frameborder="0" class="w-full h-screen max-h-[80vh] rounded-none"></iframe>
                     </div>
                 </div>
             </div>
