thank you background image

--- a/thank-you-theartofdancinglife.html
+++ b/thank-you-theartofdancinglife.html
@@ -4,7 +4,7 @@ seo:
   hide-from-google: true
 ---
 
-<section class="bg-image-style min-h-[100vh] flex justify-center items-center bg-overlay light" style="background-image: url('/uploads/images/manamei-75.jpg'); background-position: 50% 93%;">
+<section class="bg-image-style min-h-[100vh] flex bg-overlay light" style="background-image: url('/uploads/images/manamei-87.jpg'); background-position: 50% 50%;">
     <div class="text-center p-10p">
         <p class="text-feature font-serif text-[2rem] mb-8">Welcome to</p>
         <h1 class="uppercase text-[2rem] mb-4">The Art of Dancing Life</h1>
