test retreats form

--- a/contact.html
+++ b/contact.html
@@ -20,3 +20,11 @@ seo:
 
   </div>
 </section>
+
+<!-- Retreats -->
+ <section id="cta" class="border-b border-feature bg-image-style py-10p px-5p md:p-10p text-center bg-overlay {{page.cta.background.overlay_style}}"
+    style="background-image: url('{{page.cta.background.background_image}}'); background-position: {{page.cta.background.background_position}};">
+    <h2 class="heading-md-sans text-feature">Are you interested in joining <span class="font-serif text-[2rem] lg:text-[2.5rem] lowercase mx-2">in-person</span> retreats and workshops with Mana Mei?</h2>
+    <p>Join the retreat waitlist to be the first to know when Mana announces her next in-person offerings</p>
+    {% include form-retreat.html %}
+</section>
