--- a/ltm-mentorship-48h.html
+++ b/ltm-mentorship-48h.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: promo
 title: Liberation Through Movement Mentorship (48 Hours)
 description_html: The Liberation Through Movement Mentorship is a transformative 4-month program designed to help women reconnect with their bodies, emotions, and inner wisdom. Through somatic practices, dance, and guided mentorship, you'll cultivate deeper self-awareness, embodied leadership, and the tools to create meaningful change in your life. Perfect for those ready to lead with authenticity and live with purpose.
 featured-image: /uploads/images/manamei-24.jpg
@@ -103,7 +103,7 @@ investment:
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $3700
+      price: $3500
     payment-plan:
       show: true
       heading: Payment plan
