updated form and copy

--- a/ltm-mentorship-48h.html
+++ b/ltm-mentorship-48h.html
@@ -33,7 +33,7 @@ benefits:
     overlay_style: 
 who-its-for:
   heading: The Liberation Through Movement Mentorship is for women who are
-  description_html: Seeking meaningful changes and transformations in their every day life.</p><p>Desiring to reclaim freedom in their bodies and express themselves authentically.</p><p>Wanting to strengthen their inner anchor for more safety & security</p><p>Drawn to a balanced approach that honors both the Feminine and Masculine.</p><p>Looking for a daily practice that is a combination of Meditation, Physical Activation, and Spiritual Liberation.</p><p>Ready to step into Embodied Leadership and learn the tools necessary to facilitate this movement medicine.</p><p>Desiring to connect with other women in Sacred Sisterhood for support and inspiration.</p>
+  description_html: Seeking meaningful changes and transformations in their every day life.</p><p>Desiring to reclaim freedom in their bodies and express themselves authentically.</p><p>Wanting to strengthen their inner anchor for more safety & security.</p><p>Drawn to a balanced approach that honors both the Feminine and Masculine.</p><p>Looking for a daily practice that is a combination of Meditation, Physical Activation, and Spiritual Liberation.</p><p>Ready to step into Embodied Leadership and learn the tools necessary to facilitate this movement medicine.</p><p>Desiring to connect with other women in Sacred Sisterhood for support and inspiration.</p>
   background-image:
     background_image: /uploads/images/manamei-62.jpg
     image_focus: left
@@ -114,8 +114,8 @@ investment:
   border: 
 cta:
   heading: Think this may be the perfect fit for you? 
-  description_html: The next step is to apply! By doing this, you will receive an email with the Mentorship Brochure containing all of the details you need. </p><p>By joining the waitlist, you will be the first to know when Enrollment opens for the next round.
-  text: Fill out the form to get the application sent to your email
+  description_html: The next step is to apply! By doing this, you will receive an email with the Mentorship Brochure containing all of the details you need.</p>
+  text: Enter your name and email to receive the full mentorship brochure and the “next steps” on how to apply.
   button:
     text: Apply Now
     url: /mentorship-apply.html
@@ -191,7 +191,7 @@ seo:
 <!-- Inside the Course -->
 <section class="py-10p px-5p md:p-10p bg-image-style"
     style="background-image: url('{{page.inside-the-course.background-image.background_image}}'); background-position: {{page.inside-the-course.background-image.image_focus}};">
-    <div class="text-center">
+    <div class="text-center mb-6">
         <h2 class="heading-lg-sans text-feature">{{page.inside-the-course.heading}}</h2>
         <p>{{page.inside-the-course.description_html}}</p>
     </div>
