added location to application

--- a/mentorship-application.html
+++ b/mentorship-application.html
@@ -48,6 +48,16 @@ seo:
             </div>
         </fieldset>
 
+        <!-- Location -->
+        <fieldset class="mt-12">
+            <legend>Where are you located?</legend>
+            <div>
+                <label class="block">
+                    <input type="text" name="Location" required class="w-full px-1 py-2 border-b border-white bg-transparent text-feature">
+                </label>
+            </div>
+        </fieldset>
+
         <!-- Embodiediment Experience -->
         <fieldset class="mt-12">
             <legend class="mb-2">Share about your experience with embodiment work, movement & dance practices, and
