--- a/ltm-mentorship-48h.html
+++ b/ltm-mentorship-48h.html
@@ -1,6 +1,6 @@
 ---
 layout: promo
-title: Liberation Through Movement Mentorship - 48 Hour Special
+title: Liberation Through Movement Mentorship
 description_html: The Liberation Through Movement Mentorship is a transformative 4-month program designed to help women reconnect with their bodies, emotions, and inner wisdom. Through somatic practices, dance, and guided mentorship, you'll cultivate deeper self-awareness, embodied leadership, and the tools to create meaningful change in your life. Perfect for those ready to lead with authenticity and live with purpose.
 featured-image: /uploads/images/manamei-24.jpg
 heading:
@@ -103,7 +103,7 @@ investment:
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $3500
+      price: $3,700
     payment-plan:
       show: true
       heading: Payment plan
