--- a/mentorship-apply.html
+++ b/mentorship-apply.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: promo
 cta: 
   type: waitlist
   heading_html: Apply to join the Liberation Through Movement Mentorship
@@ -16,4 +16,10 @@ seo:
 ---
 
 <!-- Opt-In -->
-{% include optin.html %}
+<section id="cta" class="bg-image-style py-10p px-5p md:p-10p text-center bg-overlay {{page.cta.background.overlay_style}}"
+    style="background-image: url('{{page.cta.background.background_image}}'); background-position: {{page.cta.background.background_position}};">
+    <h2 class="heading-lg-sans text-feature">{{page.cta.heading_html}}</h2>
+    <h3 class="text-feature mb-4">{{page.cta.subtitle}}</h3>
+    <p>{{page.cta.description_html}}</p>
+    {% include form-apply-ltm.html %}
+</section>
