--- a/mana-movement-maternity.html
+++ b/mana-movement-maternity.html
@@ -10,7 +10,7 @@ heading:
   description: Honoring the Feminine Rite of Passage through connecting with Innate Wisdom of the Body
   button-enroll: 
     text: Enroll now
-    url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
+    url: https://manamei.teachable.com/p/mana-movement-maternity
   button-video: 
     show: false
     text: Watch the video
@@ -104,7 +104,7 @@ investment:
       heading: Payment plan
       price: 
   button: 
-    url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
+    url: https://manamei.teachable.com/p/mana-movement-maternity
     text: Enroll Now
   border: 
   background_image: /uploads/images/manamei-67.jpeg
@@ -138,7 +138,7 @@ cta:
   description_html: One of the biggest pains I see in the Birth Culture is the way in which women are disempowered by not feeling in control of their experience.</p><p>The way I see it, this starts inside of ourselves.</p><p>Do you TRUST your body?</p><p>Can you LISTEN to the subtle cues of your Body?</p><p>Are you connected to our intuition?</p><p>Do you have the tools to create or shift the energy inside your body?</p><p>If you answered NO to any of these questions, then there is work to be done!</p><p>If we are not deeply connected to our own intuition, trust, and knowledge of how to create and shift our experience within our body, then we may be giving our power away, and there is no greater moment in a woman’s life when this could “make or break” an experience than BIRTH.</p><p>It is time to reclaim your Power! To Create a beautiful Rite of Passage into Motherhood, full of TRUST in your Feminine Wisdom and the magic of your Body.</p>  
   button: 
     text: Enroll now
-    url: https://sso.teachable.com/secure/487916/checkout/5720976/mana-movement-maternity
+    url: https://manamei.teachable.com/p/mana-movement-maternity
   background-image: 
     background_image: /uploads/images/manamei-69.jpg
     image_focus: 60% 50%
@@ -147,7 +147,7 @@ seo:
   title: Mana Movement Maternity
   description: Mana Movement Maternity is a holistic prenatal movement program designed to help women connect with their bodies during pregnancy. The course emphasizes trust in the body, emotional awareness, and feminine pathways of movement through non-linear practices. It aims to improve mobility, strength, and mindfulness while fostering a deeper bond with the baby. Led by Mana Mei, a leader in feminine embodiment, the program prepares participants for an empowered and joyful birth experience. Suitable for all stages of pregnancy
   social_image: /uploads/images/manamei-70.jpg
-  hide-from-google: true
+  hide-from-google: false
 ---
 
 <!-- Course Heading -->
