--- a/application-thank-you.html
+++ b/application-thank-you.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: promo
 ---
 
 <section class="p-10p text-center">
@@ -10,5 +10,7 @@ layout: default
         <p>What’s the next step?</p>
         <p>If your application qualifies, you will receive an email with a link to book your free 45-minute Connection Call with Mana Mei. During this call we will discuss mentorship details, get to know eachother, and decide if this experience may be the perfect fit for you.</p>
         <p>Please allow 24 hours for a response and I look forward to taking this next step with you!</p>
+        <p><strong>Please take a moment in a quiet space to carefully read through the LTM Mentorship PDF, which outlines the details of the program, how it works, what you receive, and the investment requirements.</strong></p>
+        <a class="button" target="_blank" href="https://www.canva.com/design/DAE38vZLH-Q/ZvaEyKcT7cANdtw4lwCB0A/view?utm_content=DAE38vZLH-Q&utm_campaign=designshare&utm_medium=link&utm_source=viewer">Download the LTM Mentorship PDF</a>
     </div>
 </section>
