--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -10,7 +10,7 @@ heading:
   description_html: 
   button-enroll:
     text: Apply Now
-    url: /mentorship-apply.html
+    url: /mentorship-application.html
   button-video:
     show: true
     type: youtube
@@ -117,7 +117,7 @@ investment:
       heading: Payment plan
       price: $975 x 4 months
   button: 
-    url: /mentorship-apply.html
+    url: /mentorship-application.html
     text: Apply Now
   border: 
 faq:
@@ -179,7 +179,7 @@ cta:
   description_html: The next step is to apply! By doing this, you will receive an email with the Mentorship Brochure containing all of the details you need.
   button:
     text: Apply Now
-    url: /mentorship-apply.html
+    url: /mentorship-application.html
   background-image:
     background_image: /uploads/images/manamei-64.jpg
     background-position: bottom
